--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -3,3 +3,5 @@
   <li> Restaurant Name: <%= link_to restaurant.name, restaurant_path(restaurant) %></li>
 <%end%>
 </ul>
+
+<%=link_to 'Create Restaurant', new_restaurant_path %> 
