--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,8 @@
 <ul>
 <% @restaurants.each do |restaurant| %>
-  <li> Restaurant Name: <%= link_to restaurant.name, restaurant_path(restaurant) %></li>
+  <li> Restaurant Name: <%= link_to restaurant.name, restaurant_path(restaurant) %>
+  <%= link_to "Leave a review", new_restaurant_review_path(restaurant) %>
+  </li>
 <%end%>
 </ul>
 
